--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>55 Maxims</title>
+        <title>55 Maxims of Christian living</title>
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="stylesheet" href="assets/css/dark.css">
     </head>
     <body>
         <main>
-            <h1>55 Maxims</h1>
+            <h3>55 Maxims of Christian living</h3>
             <p><sup>1</sup> Be always with Christ, and trust God in everything.</p>
             <p><sup>2</sup> Pray as you can, not as you think you must.</p>
             <p><sup>3</sup> Have a keepable rule of prayer, done by discipline.</p>
